app/modules/main/directives/rlPublisherFilterNav/rlPublisherFilterNav.scss
@import "rl_seeds/variables";

main > nav {
  $nav-height: ($spacing-default * 3);

  background-color: rgba($color-info, 0.9);
  color: $color-white;
  box-shadow: 0 $spacing-small 0 $color-shadow;
  height: $nav-height;
  text-align: left;
  padding: $spacing-small $spacing-default;
  position: sticky;
  top: 0;

  form {
    height: 100%;

    fieldset {
      display: inline-block;
      height: 100%;

      & + fieldset {
        margin-left: ($spacing-default - 4px); // The magic spacing added to inline elements.
        margin-top: 0;
        border-left: 1px solid $color-light;
        padding-left: $spacing-default;
        position: relative;
      }
    }
  }

  label {
    line-height: 2em;
  }

  select {
    height: 100%;
    width: 180px;
    border-color: transparent;
    background-color: transparent;
    color: $color-white;
    cursor: pointer;

    &:not(:disabled):hover,
    &:not(:disabled):focus {
      border-color: $color-white;
    }
  }

  select {
    background-image: $image-down-arrow-white;
    &:-moz-focusring {
      text-shadow: 0 0 0 $color-white;
    }
  }

  .rl-daterange {

    input[type="checkbox"] {
      display: none;

      & + label {
        display: inline-block;
        width: 15em;
        border: 1px solid transparent;
        cursor: pointer;

        & > span {
          text-align: center;
          width: 50%;
          display: inline-block;
          position: relative;

          &:empty:before {
            content: '-\221E';
          }

          & + span:before {
            content: '-';
            position: absolute;
            left: -.25em;
          }
        }
      }

      & + label:hover,
      &:checked + label {
        border: 1px solid $color-white;
      }
    }

    ul {
      text-align: initial;
      background-color: $color-white;
      box-shadow: $spacing-small $spacing-small 0 $color-shadow;
      border: 1px solid $color-light;
      color: $color-bodycopy;
      padding: $spacing-small;
      width: 18em;
      top: $spacing-large;

      li {
        & + li {
          margin-top: $spacing-small;
        }

        &:last-of-type {
          border-top: 1px solid $color-light;

          label {
            margin-top: $spacing-small;
          }
        }
      }

      input[type="radio"] {
        display: none;

        & + label {
          display: block;
          cursor: pointer;
          padding: 0 $spacing-small;

          &:hover {
            background-color: $color-bright;
          }
        }

        &:checked + label {
          background-color: $color-info;
          color: $color-white;
        }
      }

      input[type="date"] {
        color: $color-bodycopy;
        width: 50%;
        float: left;
        border: none;

        margin-top: $spacing-small;

        &::-webkit-calendar-picker-indicator {
          color: $color-action;
        }
      }
    }
  }
}

